Cambios en el header
Cambios en el header, saqué el menu dropdown del lado derecho del header porque no encontraba manera de dejarlo fijo dentro del div sin que se rompa uno u el otro.

El diseño aun no es responsive, ya con 2 o 3 zoom ins se rompe, y tiene un scroll lateral que acabo de notar y aun no se como sacar.

El menu dropdown y las <br> solo están para testear que el header se quede fijo en el scroll, aun falta el contenido, el dropdown puede que le cambie el estilo y ponga en otra parte.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,61 @@
 </head>
 
 <body>
-    <ul>
-        <li><a class="bg-green" href="#inicio">Inicio</a></li>
-        <li class="dropdown"><a href="#blog">Adopta</a></li>
-        <li><a href="#acercaDe">Acerca de</a></li>
-    </ul>
-    <div class="dropdown f-right">
+    <div class="grid-header">
+        <ul>
+            <li><a class="bg-green" href="#inicio">Inicio</a></li>
+            <li><a href="#blog">Adoptá</a></li>
+            <li><a href="#blog">Postula tu casa para tránsito</a></li>
+            <li><a href="#acercaDe">Acerca de</a></li>
+            <li><a href="#blog">Contactanos</a></li>
+            <li style="float:right; margin-right: -10px;"><a class="bg-orange" href="#inicio">¡Hace una donación!</a>
+            </li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="dropdown f-left">
         <button class="dropdown-btn">¡Seguinos en nuestras redes!</button>
         <div class="dropdown-content">
-            <a href="#">Facebook<img src="/Ej11HolaMundo/IconsRedesSociales/icons8-facebook-50.png" alt=""></a>
-            <a href="#">Twitter <img src="/Ej11HolaMundo/IconsRedesSociales/icons8-twitter-48.png" alt=""></a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
             <a href="#">Instagram</a>
         </div>
     </div>
-</body>
 
 </html>
