Arreglo margin body + *{margin-padding}

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProyectoFinal(Demichis)</title>
+    <title>ProyectoFinal(DMichis)</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
             <li><a href="#blog">Postula tu casa para tránsito</a></li>
             <li><a href="#acercaDe">Acerca de</a></li>
             <li><a href="#blog">Contactanos</a></li>
-            <li style="float:right; margin-right: -10px;"><a class="bg-orange" href="#inicio">¡Hace una donación!</a>
+            <li style="float:right; margin-right: -10px;"><a class="bg-orange" href="#donacion">¡Hace una donación!</a>
             </li>
         </ul>
     </div>
@@ -36,21 +36,10 @@
     <br>
     <br>
     <br>
-    <br><br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br><br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br><br>
     <br>
     <br>
     <br>
@@ -66,5 +55,7 @@
             <a href="#">Instagram</a>
         </div>
     </div>
+
+</body>
 
 </html>
