--- a/index.html
+++ b/index.html
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProyectoFinal(DMichis)</title>
+    <title>Proyecto Final (DMichis) Lucas Teruel</title>
 </head>
 
 <body>
-    <div class="grid-header">
+    <div class="header">
         <ul>
             <li><a class="bg-green" href="#inicio">Inicio</a></li>
-            <li><a href="#blog">Adoptá</a></li>
-            <li><a href="#blog">Postula tu casa para tránsito</a></li>
-            <li><a href="#acercaDe">Acerca de</a></li>
-            <li><a href="#blog">Contactanos</a></li>
-            <li style="float:right; margin-right: -10px;"><a class="bg-orange" href="#donacion">¡Hace una donación!</a>
+            <li><a href="#Adopcion">Adoptá</a></li>
+            <li><a href="#Contacto">Contactanos</a></li>
+            <li style="float:right;"><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
+                    donación!</a>
             </li>
         </ul>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="fondo-inicio">
+
+        <div class="traslucid box">
+            <p>
+            <h2>¿Por que adoptar un callejero?</h2>
+            </p>
+            <br>
+            <p>Adoptando a un gato callejero estarás salvando su vida, ofreciéndole una segunda oportunidad de tener un
+                hogar y llevar una existencia digna y feliz. Pero además, permites que el espacio libre lo pueda ocupar
+                un segundo gato, también a la espera de su familia perfecta</p>
+        </div>
+        <div class="traslucid box">
+            <p>
+            <h2>¿Quienes Somos?</h2>
+            </p>
+            <br>
+            <p>Somos una organizacion conformada por amigos, conocidos, vecinos, y gente preocupada por el bienestar de
+                los gatos callejeros, sin fines de lucro.
+                Nuestro objetivo es ayudar a los gatos y animales callejeros de nuestra comunidad.
+            </p>
+        </div>
+        <div class="traslucid box">
+            <p>
+            <h2>¿Puedo adoptar un callejero?</h2>
+            </p>
+            <br>
+            <p>¡Claro que puedes!
+                Las dudas a la hora de adoptar un animal callejero son del todo normales
+                Los animales callejeros, como cualquier animal aprecian el cariño de una familia y un hogar ante todas
+                las cosas. ¡Contactate con nosotros y te
+                asesoraremos!
+            </p>
+        </div>
+
+    </div>
+
     <div class="dropdown f-left">
-        <button class="dropdown-btn">¡Seguinos en nuestras redes!</button>
+        <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
         <div class="dropdown-content">
-            <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a>
+            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a href="https://twitter.com/home" target="_blank">Twitter</a>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
         </div>
     </div>
 
