--- a/index.html
+++ b/index.html
@@ -9,61 +9,33 @@
     <title>Proyecto Final (DMichis) Lucas Teruel</title>
 </head>
 
+
+
 <body>
-    <div class="header">
-        <ul>
-            <li><a class="bg-green" href="#inicio">Inicio</a></li>
-            <li><a href="#Adopcion">Adoptá</a></li>
-            <li><a href="#Contacto">Contactanos</a></li>
-            <li style="float:right;"><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
-                    donación!</a>
-            </li>
-        </ul>
-    </div>
-    <div class="fondo-inicio">
+    <header>
+        <div></div>
+        <nav></nav>
+    </header>
+    <main>
+        <div>
+            <section>
 
-        <div class="traslucid box">
-            <p>
-            <h2>¿Por que adoptar un callejero?</h2>
-            </p>
-            <br>
-            <p>Adoptando a un gato callejero estarás salvando su vida, ofreciéndole una segunda oportunidad de tener un
-                hogar y llevar una existencia digna y feliz. Pero además, permites que el espacio libre lo pueda ocupar
-                un segundo gato, también a la espera de su familia perfecta</p>
+            </section>
+            <section>
+                <article>
+                    <img src="" alt="">
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </article>
+            </section>
         </div>
-        <div class="traslucid box">
-            <p>
-            <h2>¿Quienes Somos?</h2>
-            </p>
-            <br>
-            <p>Somos una organizacion conformada por amigos, conocidos, vecinos, y gente preocupada por el bienestar de
-                los gatos callejeros, sin fines de lucro.
-                Nuestro objetivo es ayudar a los gatos y animales callejeros de nuestra comunidad.
-            </p>
-        </div>
-        <div class="traslucid box">
-            <p>
-            <h2>¿Puedo adoptar un callejero?</h2>
-            </p>
-            <br>
-            <p>¡Claro que puedes!
-                Las dudas a la hora de adoptar un animal callejero son del todo normales
-                Los animales callejeros, como cualquier animal aprecian el cariño de una familia y un hogar ante todas
-                las cosas. ¡Contactate con nosotros y te
-                asesoraremos!
-            </p>
-        </div>
+        <aside></aside>
+    </main>
+    <footer>
 
-    </div>
-
-    <div class="dropdown f-left">
-        <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
-        <div class="dropdown-content">
-            <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-            <a href="https://twitter.com/home" target="_blank">Twitter</a>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-        </div>
-    </div>
+    </footer>
 
 </body>
 
