--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
 <body>
     <header>
         <div></div>
-        <nav></nav>
+        <nav class="header-menu">
+            <ul>
+                <li><a class="bg-green" href="#inicio">Inicio</a></li>
+                <li><a href="#Adopcion">Adoptá</a></li>
+                <li><a href="#Contacto">Contactanos</a></li>
+                <li style="float:right;"><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
+                        donación!</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div>
-            <section>
+        <div class="contenido">
+            <section class="seccion">
 
             </section>
-            <section>
+            <section class="seccion">
                 <article>
                     <img src="" alt="">
                     <div>
-                        <h3></h3>
-                        <p></p>
+                        <h3>Titulo</h3>
+                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+
+                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
                     </div>
                 </article>
             </section>
