Experimentando con el header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div></div>
         <nav class="header-menu">
             <ul>
-                <li><a class="bg-green" href="#inicio">Inicio</a></li>
-                <li><a href="#Adopcion">Adoptá</a></li>
-                <li><a href="#Contacto">Contactanos</a></li>
+                <li><a class="bg-green" href="index.html">Inicio</a></li>
+                <li><a href="adopcion.html">Adoptá</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
                 <li style="float:right;"><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
                         donación!</a>
                 </li>
