Rearmando botones y header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a class="bg-green" href="index.html">Inicio</a></li>
                 <li><a href="adopcion.html">Adoptá</a></li>
                 <li><a href="contacto.html">Contactanos</a></li>
-                <li style="float:right;"><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
+                <li><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
                         donación!</a>
                 </li>
             </ul>
@@ -28,7 +28,16 @@
     <main>
         <div class="contenido">
             <section class="seccion">
+                <article>
+                    <h3>Titulo</h3>
+                    <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                        quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                        velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                        aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
 
+                        Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                        illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+                </article>
             </section>
             <section class="seccion">
                 <article>
@@ -46,7 +55,7 @@
                 </article>
             </section>
         </div>
-        <aside></aside>
+        <aside class="contenido-lat"></aside>
     </main>
     <footer>
 
