--- a/index.html
+++ b/index.html
@@ -26,22 +26,14 @@
         </nav>
     </header>
     <main>
-        <div class="contenido">
+        <div class="contenido-div">
             <section class="seccion">
-                <article>
-                    <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                        quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                        velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                        aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
 
-                        Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                        illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
-                </article>
             </section>
             <section class="seccion">
                 <article>
-                    <img src="" alt="">
+                    <img src="/IconsRedesSociales/icons8-facebook-150.png" alt="Imagen">
+
                     <div>
                         <h3>Titulo</h3>
                         <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
