Header aplicado y +icons

--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
 
 <body>
     <header>
-        <div></div>
-        <nav class="header-menu">
+        <div class="header-menu">
             <ul>
+                <li><a style="padding:0;" class="header-logo" href="index.html"><img src="https://placekitten.com/50/50"
+                            alt=""></a></li>
                 <li><a class="bg-green" href="index.html">Inicio</a></li>
                 <li><a href="adopcion.html">Adoptá</a></li>
                 <li><a href="contacto.html">Contactanos</a></li>
-                <li><a class="bg-orange" href="https://cafecito.app/" target="_blank">¡Hace una
+                <li style="float:right"><a class=" bg-orange" href="https://cafecito.app/" target="_blank">¡Hace
+                        una
                         donación!</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </header>
     <main>
         <div class="contenido-div">
             <section class="seccion">
-
             </section>
             <section class="seccion">
                 <article>
-                    <img src="/IconsRedesSociales/icons8-facebook-150.png" alt="Imagen">
+                    <img src="/Gatitos/250 (2).jpg" alt="Imagen">
 
                     <div>
                         <h3>Titulo</h3>
@@ -47,7 +48,9 @@
                 </article>
             </section>
         </div>
-        <aside class="contenido-lat"></aside>
+        <aside class="contenido-lat">
+            <img src="/Gatitos/icons8-vista-posterior-del-gato-100.png" alt="">
+        </aside>
     </main>
     <footer>
 
