Cajas primer div

--- a/index.html
+++ b/index.html
@@ -28,8 +28,51 @@
         </div>
     </header>
     <main>
-        <div class="contenido-div">
-            <section class="seccion">
+       
+            <div class="contenido-div">
+                <section class="seccion">
+                    <div class="fondo-inicio">
+                    <div class="traslucid box">
+                        <p>
+                        <h2>¿Por que adoptar un callejero?</h2>
+                        </p>
+                        <br>
+                        <p>Adoptando a un gato callejero estarás salvando su vida, ofreciéndole una segunda oportunidad
+                            de
+                            tener un
+                            hogar y llevar una existencia digna y feliz. Pero además, permites que el espacio libre lo
+                            pueda
+                            ocupar
+                            un segundo gato, también a la espera de su familia perfecta</p>
+                    </div>
+                    <div class="traslucid box">
+                        <p>
+                        <h2>¿Quienes Somos?</h2>
+                        </p>
+                        <br>
+                        <p>Somos una organizacion conformada por amigos, conocidos, vecinos, y gente preocupada por el
+                            bienestar de
+                            los gatos callejeros, sin fines de lucro.
+                            Nuestro objetivo es ayudar a los gatos y animales callejeros de nuestra comunidad.
+                        </p>
+                    </div>
+                    <div class="traslucid box">
+                        <p>
+                        <h2>¿Puedo adoptar un callejero?</h2>
+                        </p>
+                        <br>
+                        <p>¡Claro que puedes!
+                            Las dudas a la hora de adoptar un animal callejero son del todo normales
+                            Los animales callejeros, como cualquier animal aprecian el cariño de una familia y un hogar
+                            ante
+                            todas
+                            las cosas. ¡Contactate con nosotros y te
+                            asesoraremos!
+                        </p>
+                    </div>
+
+            </div>
+            
             </section>
             <section class="seccion">
                 <article>
@@ -47,7 +90,7 @@
                     </div>
                 </article>
             </section>
-        </div>
+            </div>
         <aside class="contenido-lat">
             <img src="/Gatitos/icons8-vista-posterior-del-gato-100.png" alt="">
         </aside>
