--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </div>
     </header>
     <main>
-       
-            <div class="contenido-div">
-                <section class="seccion">
-                    <div class="fondo-inicio">
+
+        <div class="contenido-div">
+            <section class="seccion">
+                <div class="fondo-inicio">
                     <div class="traslucid box">
                         <p>
                         <h2>¿Por que adoptar un callejero?</h2>
@@ -71,15 +71,14 @@
                         </p>
                     </div>
 
-            </div>
-            
+                </div>
+
             </section>
             <section class="seccion">
                 <article>
-                    <img src="/Gatitos/250 (2).jpg" alt="Imagen">
 
                     <div>
-                        <h3>Titulo</h3>
+                        <h3>Algunos de nuestros candidatos más peludos</h3>
                         <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
                             quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
                             velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
@@ -87,13 +86,50 @@
 
                             Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
                             illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+
+                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+
+                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+
+                    </div>
+
+                </article>
+            </section>
+            <section class="seccion70">
+                <article>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+
+                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+
                     </div>
                 </article>
             </section>
-            </div>
-        <aside class="contenido-lat">
-            <img src="/Gatitos/icons8-vista-posterior-del-gato-100.png" alt="">
-        </aside>
+            <aside class="aside30">
+                <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
+                    quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
+                    velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
+                    aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+
+                    Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
+                    illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
+            </aside>
+        </div>
+
     </main>
     <footer>
 
