--- a/index.html
+++ b/index.html
@@ -105,29 +105,23 @@
 
                 </article>
             </section>
-            <section class="seccion70">
+
+            <section class="seccion">
                 <article>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
-
-                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
-
+                    <div class="seccionDropDown">
+                        <div class="dropdown f-left">
+                            <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
+                            <div class="dropdown-content">
+                                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                                <a href="https://twitter.com/home" target="_blank">Twitter</a>
+                                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                            </div>
+                        </div>
                     </div>
                 </article>
-            </section>
-            <aside class="aside30">
-                <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                    quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                    velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                    aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
 
-                    Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                    illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
-            </aside>
+            </section>
+
         </div>
 
     </main>
