--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="main.js"></script>
     <title>Proyecto Final (DMichis) Lucas Teruel</title>
 </head>
 
@@ -15,8 +16,8 @@
     <header>
         <div class="header-menu">
             <ul>
-                <li><a style="padding:0;" class="header-logo" href="index.html"><img src="https://placekitten.com/50/50"
-                            alt=""></a></li>
+                <li><a style="padding:0;" class="header-logo" href="index.html"><img
+                            src="Gatitos/icons8-perfil-de-gato-64.png" alt=""></a></li>
                 <li><a class="bg-green" href="index.html">Inicio</a></li>
                 <li><a href="adopcion.html">Adoptá</a></li>
                 <li><a href="contacto.html">Contactanos</a></li>
@@ -77,29 +78,15 @@
             <section class="seccion">
                 <article>
 
-                    <div>
-                        <h3>Algunos de nuestros candidatos más peludos</h3>
-                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+                    <div class="contenedorCarrousel">
 
-                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
-                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
+                        <div class="boton-adelante">
+                            &#60
+                        </div>
+                        <div class="boton-adelante">
+                            &#62
+                        </div>
 
-                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
-                        <p>Lorem ipsum dolor sit amet. Ad numquam optio aut tempora nostrum a error quia. Et molestiae
-                            quia ut delectus iure aut aliquam atque cum culpa esse non harum voluptatum. Et commodi
-                            velit in debitis sunt 33 ipsam dolorum. Aut galisum Quis qui recusandae voluptate qui
-                            aliquam molestiae ut quia debitis ut ipsum enim hic libero commodi est voluptates unde.
-
-                            Rem velit porro sit nostrum itaque quo consectetur assumenda ad recusandae galisum ut saepe
-                            illo et molestiae voluptatum. Ut repellat omnis qui sint quae aut autem obcaecati.</p>
 
                     </div>
 
@@ -107,6 +94,7 @@
             </section>
 
             <section class="seccion">
+
                 <article>
                     <div class="seccionDropDown">
                         <div class="dropdown f-left">
@@ -117,7 +105,9 @@
                                 <a href="https://www.instagram.com/" target="_blank">Instagram</a>
                             </div>
                         </div>
+
                     </div>
+                    <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
                 </article>
 
             </section>
