--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
     <title>Proyecto Final (DMichis) Lucas Teruel</title>
 </head>
 
 
 
 <body>
+
     <header>
         <div class="header-menu">
             <ul>
@@ -80,11 +80,11 @@
 
                     <div class="contenedorCarrousel">
 
-                        <div class="boton-adelante">
-                            &#60
-                        </div>
-                        <div class="boton-adelante">
+                        <div class="boton adelante">
                             &#62
+                        </div>
+                        <div class="boton atras">
+                            &#60
                         </div>
 
 
@@ -118,7 +118,7 @@
     <footer>
 
     </footer>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
