--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <article>
 
                     <div class="contenedorCarrousel">
-
+                        <img src="img1.jpg" alt="">
                         <div class="boton adelante">
                             &#62
                         </div>
