Imagenes de carrousel cargadas pero trambolikas

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <article>
 
                     <div class="contenedorCarrousel">
-                        <img src="img1.jpg" alt="">
+                        <img src="Carrousel/img1.webp" alt="">
                         <div class="boton adelante">
                             &#62
                         </div>
