Tamaño imagenes, posicion y box radios-shadow

--- a/index.html
+++ b/index.html
@@ -76,39 +76,25 @@
 
             </section>
             <section class="seccion">
-                <article>
 
-                    <div class="contenedorCarrousel">
-                        <img src="Carrousel/img1.webp" alt="">
-                        <div class="boton adelante">
-                            &#62
-                        </div>
-                        <div class="boton atras">
-                            &#60
-                        </div>
+                <section class="seccion">
+                    <article>
 
-
-                    </div>
-
-                </article>
-            </section>
-
-            <section class="seccion">
-
-                <article>
-                    <div class="seccionDropDown">
-                        <div class="dropdown f-left">
-                            <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
-                            <div class="dropdown-content">
-                                <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-                                <a href="https://twitter.com/home" target="_blank">Twitter</a>
-                                <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                        <div class="contenedorCarrousel">
+                            <img class="img-carrousel" src="Carrousel/img1.webp" alt="">
+                            <div class="boton adelante">
+                                &#62
                             </div>
+                            <div class="boton atras">
+                                &#60
+                            </div>
+
+
                         </div>
 
-                    </div>
-                    <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
-                </article>
+                    </article>
+                </section>
+
 
             </section>
 
@@ -116,6 +102,20 @@
 
     </main>
     <footer>
+        <article>
+            <div class="seccionDropDown">
+                <div class="dropdown f-left">
+                    <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
+                    <div class="dropdown-content">
+                        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
+                        <a href="https://twitter.com/home" target="_blank">Twitter</a>
+                        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                    </div>
+                </div>
+
+            </div>
+            <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
+        </article>
 
     </footer>
     <script src="main.js"></script>
