Radius dropdown, titulo carrusel

--- a/index.html
+++ b/index.html
@@ -75,12 +75,18 @@
                 </div>
 
             </section>
-            <section class="seccion">
-
+            <div class="tituloIntermedio"">
+             <img src=" Gatitos/icons8-vista-posterior-del-gato-64(2).png" alt="">
+                <h1>Algunos de nuestros candidatos más peludos</h1><img
+                    src=" Gatitos/icons8-vista-posterior-del-gato-64(2).png" alt="">
+            </div>
+            <section class=" seccion">
                 <section class="seccion">
+
                     <article>
 
                         <div class="contenedorCarrousel">
+
                             <img class="img-carrousel" src="Carrousel/img1.webp" alt="">
                             <div class="boton adelante">
                                 &#62
@@ -105,11 +111,14 @@
         <article>
             <div class="seccionDropDown">
                 <div class="dropdown f-left">
-                    <button class="dropdown-btn"> ¡Seguinos en nuestras redes!</button>
+                    <button class="dropdown-btn"> ¡Seguinos!</button>
                     <div class="dropdown-content">
-                        <a href="https://www.facebook.com/" target="_blank">Facebook</a>
-                        <a href="https://twitter.com/home" target="_blank">Twitter</a>
-                        <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/" target="_blank"><img
+                                src="IconsRedesSociales/icons8-facebook-50.png" alt=""> </a>
+                        <a href="https://twitter.com/home" target="_blank"><img
+                                src="IconsRedesSociales/icons8-twitter-50.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"><img
+                                src="IconsRedesSociales/icons8-instagram-50.png" alt=""></a>
                     </div>
                 </div>
 
