--- a/adopcion.html
+++ b/adopcion.html
@@ -29,27 +29,40 @@
 
     <main>
 
-        <footer>
-            <article>
-                <div class="seccionDropDown">
-                    <div class="dropdown f-left">
-                        <button class="dropdown-btn"> ¡Seguinos!</button>
-                        <div class="dropdown-content">
-                            <a href="https://www.facebook.com/" target="_blank"><img
-                                    src="IconsRedesSociales/icons8-facebook-50.png" alt=""> </a>
-                            <a href="https://twitter.com/home" target="_blank"><img
-                                    src="IconsRedesSociales/icons8-twitter-50.png" alt=""> </a>
-                            <a href="https://www.instagram.com/" target="_blank"><img
-                                    src="IconsRedesSociales/icons8-instagram-50.png" alt=""></a>
-                        </div>
-                    </div>
+        <div class="contenedor-div">
 
-                </div>
-                <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
-            </article>
+            <section class="seccion">
 
-        </footer>
+                <article>
+
+
+
+                </article>
+
+            </section>
+
+        </div>
+
     </main>
 
+    <footer>
+        <article>
+            <div class="seccionDropDown">
+                <div class="dropdown f-left">
+                    <button class="dropdown-btn"> ¡Seguinos!</button>
+                    <div class="dropdown-content">
+                        <a href="https://www.facebook.com/" target="_blank"><img
+                                src="IconsRedesSociales/icons8-facebook-50.png" alt=""> </a>
+                        <a href="https://twitter.com/home" target="_blank"><img
+                                src="IconsRedesSociales/icons8-twitter-50.png" alt=""> </a>
+                        <a href="https://www.instagram.com/" target="_blank"><img
+                                src="IconsRedesSociales/icons8-instagram-50.png" alt=""></a>
+                    </div>
+                </div>
 
+            </div>
+            <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
+        </article>
+
+    </footer>
 </body>
