Datos gatos adopcion

--- a/adopcion.html
+++ b/adopcion.html
@@ -27,15 +27,145 @@
         </div>
     </header>
 
+    <div class="tituloIntermedio">
+        <h1>Quienes estan actualmente en transito, buscamos un hogar permanente</h1>
+    </div>
+
     <main>
 
         <div class="contenedor-div">
 
-            <section class="seccion">
+            <section class="seccion adopcion">
+                <article>
+                    <img src="Adopcion/250.jpg" alt="">
+                </article>
+                <article>
+                    <ul>
+                        <li>
+                            <h2>Carmelo</h2>
+                        </li>
+                        <li>
+                            <h1>Macho</h1>
+                        </li>
+                        <li>
+                            <h1>4 años 3 meses</h1>
+                        </li>
+                        <li>
+                            <h1>Caprichoso</h1>
+                        </li>
+                        <p>Llego al hogar en busca de comida, recibió unos mimos y nunca se fue ¡Vino buscando cobre y
+                            encontró oro!</p>
+
+                    </ul>
+
+                </article>
+
+            </section>
+            <section class="seccion adopcion">
 
                 <article>
+                    <img src="Adopcion/250 (1).jpg" alt="">
+                </article>
+
+                <article>
+                    <ul>
+                        <li>
+                            <h2>Kenia</h2>
+                        </li>
+                        <li>
+                            <h1>Hembra</h1>
+                        </li>
+                        <li>
+                            <h1>1 año 2 meses</h1>
+                        </li>
+                        <li>
+                            <h1>Juguetona</h1>
+                        </li>
+                        <p>Nunca se cansa de jugar (siempre y cuando esté despierta)</p>
+
+                    </ul>
+
+                </article>
 
 
+            </section>
+            <section class="seccion adopcion">
+
+                <article>
+                    <img src="Adopcion/250 (2).jpg" alt="">
+                </article>
+
+                <article>
+                    <ul>
+                        <li>
+                            <h2>Pastafrola</h2>
+                        </li>
+                        <li>
+                            <h1>Hembra</h1>
+                        </li>
+                        <li>
+                            <h1>6 años 1 mes</h1>
+                        </li>
+                        <li>
+                            <h1>Delicada</h1>
+                        </li>
+                        <p>Una gata de modales refinados...</p>
+
+                    </ul>
+
+                </article>
+
+            </section>
+            <section class="seccion adopcion">
+
+                <article>
+                    <img src="Adopcion/250 (3).jpg" alt="">
+                </article>
+
+                <article>
+                    <ul>
+                        <li>
+                            <h2>Runa</h2>
+                        </li>
+                        <li>
+                            <h1>Hembra</h1>
+                        </li>
+                        <li>
+                            <h1>2 años 1 mes</h1>
+                        </li>
+                        <li>
+                            <h1>Recelosa</h1>
+                        </li>
+                        <p>Muy amigable con los humanos, pero no tanto con otros felinos a la hora de compartirlos!</p>
+
+                    </ul>
+
+                </article>
+
+            </section>
+            <section class="seccion adopcion">
+
+                <article>
+                    <img src="Adopcion/250 (4).jpg" alt="">
+                </article>
+
+                <article>
+                    <ul>
+                        <li>
+                            <h2>Samurai</h2>
+                        </li>
+                        <li>
+                            <h1>Macho</h1>
+                        </li>
+                        <li>
+                            <h1>3 años 9 meses</h1>
+                        </li>
+                        <li>
+                            <h1>Glotón</h1>
+                        </li>
+                        <p>No dejarse engañar por su tamaño, lo único que le gusta tanto como dormir, es la comida</p>
+
+                    </ul>
 
                 </article>
 
