Cambios en el footer

--- a/adopcion.html
+++ b/adopcion.html
@@ -29,16 +29,20 @@
 
     <div class="tituloIntermedio">
         <h1>Quienes estan actualmente en transito, buscamos un hogar permanente</h1>
-    </div>
 
+    </div>
+    <div class="tituloIntermedio">
+        <h3>¡Haz click en el boton para contactarte con nosotros!</h3>
+
+    </div>
     <main>
 
         <div class="contenedor-div">
 
-            <section class="seccion adopcion">
-                <article>
-                    <img src="Adopcion/250.jpg" alt="">
-                </article>
+            <section class="seccion adopcion flex">
+
+                <a href="contacto.html"> <img src="Adopcion/250.jpg" alt=""></a>
+
                 <article>
                     <ul>
                         <li>
@@ -59,14 +63,15 @@
                     </ul>
 
                 </article>
+                <a href="contacto.html">
+                    <div class="boton"></div>
+                </a>
+
 
             </section>
-            <section class="seccion adopcion">
+            <section class="seccion adopcion flex">
 
-                <article>
-                    <img src="Adopcion/250 (1).jpg" alt="">
-                </article>
-
+                <a href="contacto.html"> <img src="Adopcion/250 (1).jpg" alt=""></a>
                 <article>
                     <ul>
                         <li>
@@ -86,14 +91,17 @@
                     </ul>
 
                 </article>
+                <a href="contacto.html">
+                    <div class="boton"></div>
+                </a>
 
 
             </section>
-            <section class="seccion adopcion">
+            <section class="seccion adopcion flex">
 
-                <article>
-                    <img src="Adopcion/250 (2).jpg" alt="">
-                </article>
+
+                <a href="contacto.html"> <img src="Adopcion/250 (2).jpg" alt=""></a>
+
 
                 <article>
                     <ul>
@@ -114,13 +122,15 @@
                     </ul>
 
                 </article>
+                <a href="contacto.html">
+                    <div class="boton"></div>
+                </a>
 
             </section>
-            <section class="seccion adopcion">
+            <section class="seccion adopcion flex">
 
-                <article>
-                    <img src="Adopcion/250 (3).jpg" alt="">
-                </article>
+                <a href="contacto.html"> <img src="Adopcion/250 (3).jpg" alt=""></a>
+
 
                 <article>
                     <ul>
@@ -136,18 +146,23 @@
                         <li>
                             <h1>Recelosa</h1>
                         </li>
-                        <p>Muy amigable con los humanos, pero no tanto con otros felinos a la hora de compartirlos!</p>
+                        <p>Muy amigable con los humanos, pero no tanto con otros felinos a la hora de compartirlos!
+                        </p>
+
 
                     </ul>
 
                 </article>
+                <a href="contacto.html">
+                    <div class="boton"></div>
+                </a>
 
             </section>
-            <section class="seccion adopcion">
+            <section class="seccion adopcion flex">
 
-                <article>
-                    <img src="Adopcion/250 (4).jpg" alt="">
-                </article>
+
+                <a href="contacto.html"> <img src="Adopcion/250 (4).jpg" alt=""></a>
+
 
                 <article>
                     <ul>
@@ -163,11 +178,15 @@
                         <li>
                             <h1>Glotón</h1>
                         </li>
-                        <p>No dejarse engañar por su tamaño, lo único que le gusta tanto como dormir, es la comida</p>
+                        <p>No dejarse engañar por su tamaño, lo único que le gusta tanto como dormir, es la comida
+                        </p>
 
                     </ul>
 
                 </article>
+                <a href="contacto.html">
+                    <div class="boton"></div>
+                </a>
 
             </section>
 
@@ -176,9 +195,10 @@
     </main>
 
     <footer>
+        <hr>
         <article>
-            <div class="seccionDropDown">
-                <div class="dropdown f-left">
+            <div class="seccionDropDown f-right">
+                <div class="dropdown f-right">
                     <button class="dropdown-btn"> ¡Seguinos!</button>
                     <div class="dropdown-content">
                         <a href="https://www.facebook.com/" target="_blank"><img
@@ -191,8 +211,18 @@
                 </div>
 
             </div>
-            <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
+            <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         </article>
 
+        <div class="flex centrado">
+            <img src="IconsRedesSociales/icons8-copyright-all-rights-reserved-96.png" alt="">
+            <h4 style="color:#333 ;"> 2022-3022 DMICHIS S.A.</h4>
+        </div>
+
+        <div class="flex f-left">
+            <p style="margin:12px ;">Política de privacidad</p>
+            <p style="margin:12px ;">Términos y condiciones</p>
+        </div>
+        <hr>
     </footer>
 </body>
