--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
 
     </main>
     <footer>
+        <hr>
         <article>
-            <div class="seccionDropDown">
-                <div class="dropdown f-left">
+            <div class="seccionDropDown f-right">
+                <div class="dropdown f-right">
                     <button class="dropdown-btn"> ¡Seguinos!</button>
                     <div class="dropdown-content">
                         <a href="https://www.facebook.com/" target="_blank"><img
@@ -123,9 +124,19 @@
                 </div>
 
             </div>
-            <img class="f-left" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
+            <img class="f-right" src="Gatitos/icons8-trasero-de-gato-100.png" alt="">
         </article>
 
+        <div class="flex centrado">
+            <img src="IconsRedesSociales/icons8-copyright-all-rights-reserved-96.png" alt="">
+            2022-3022 DMICHIS S.A.
+        </div>
+
+        <div class="flex f-left">
+            <p style="margin:12px ;">Política de privacidad</p>
+            <p style="margin:12px ;">Términos y condiciones</p>
+        </div>
+        <hr>
     </footer>
     <script src="main.js"></script>
 </body>
